--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  /* change */
 }
+/* HEADER */
 .header {
   padding: 1rem 0 1.5rem 0;
   display: grid;
@@ -16,8 +19,8 @@ body {
   gap: 1.5rem;
   background-color: var(--white);
   box-shadow: 10px 5px 5px var(--blue-light);
+  grid-area: 1/2/2/-1;
 }
-
 /* Search */
 .search {
   display: flex;
@@ -110,3 +113,39 @@ body {
   border-radius: 2rem;
   font-weight: bold;
 }
+/* SIDE BAR */
+.sidebar {
+  grid-area: 1/1/-1/2;
+  background-color: var(--blue);
+  color: var(--white);
+  padding: 0 0 0 1rem;
+  font-size: large;
+  font-weight: 600;
+}
+.sidebar--head {
+  display: flex;
+  gap: 0.5rem;
+}
+.sidebar svg {
+  width: 1.5rem;
+  fill: var(--white);
+  vertical-align: middle;
+  margin: 0 0.6em 0 0;
+}
+.sidebar--head svg {
+  width: 2.5rem;
+  /* background-color: ; */
+  fill: var(--white);
+}
+.sidebar--nav {
+}
+.sidebar ul {
+  padding: 0;
+  margin: 1em 0 3em 1.5em;
+}
+.sidebar li {
+  list-style-type: none;
+  margin: 0 0 0.8em 0;
+}
+
+list-style-type: none;
