--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
   --black: #111;
   --blue: rgb(33, 137, 221);
   --blue-light: #dde6ee;
+  --orange: rgb(228, 184, 103);
+  --grey-dark: rgb(43, 43, 43);
+  --grey-light: rgb(95, 95, 95);
 }
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  /* change */
+  grid-template-columns: 1fr 3fr 1.3fr;
+  min-height: 100vh;
 }
 /* HEADER */
 .header {
@@ -115,7 +118,7 @@ body {
 }
 /* SIDE BAR */
 .sidebar {
-  grid-area: 1/1/-1/2;
+  grid-area: 1/1/3/2;
   background-color: var(--blue);
   color: var(--white);
   padding: 0 0 0 1rem;
@@ -137,8 +140,6 @@ body {
   /* background-color: ; */
   fill: var(--white);
 }
-.sidebar--nav {
-}
 .sidebar ul {
   padding: 0;
   margin: 1em 0 3em 1.5em;
@@ -148,4 +149,86 @@ body {
   margin: 0 0 0.8em 0;
 }
 
-list-style-type: none;
+/* PROJETCTs */
+.projects {
+  background-color: var(--blue-light);
+  /* grid-area: 2/2/3/-1; */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+  gap: 1rem;
+  padding: 1rem;
+}
+.projects h2 {
+  grid-area: 1/1/2/-1;
+  font-size: 1.3rem;
+  margin: 0.5em 0 0;
+}
+.project {
+  background-color: var(--white);
+  border-left: 6px solid var(--orange);
+  border-radius: 0.6rem;
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 2rem 1rem 1rem;
+}
+.project h3 {
+  margin: 0;
+}
+.project p {
+  margin: 0.5rem 0 1rem;
+}
+.project--buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+.project--buttons button {
+  border: none;
+}
+.project--buttons button svg {
+  width: 1.5rem;
+  fill: var(--grey-dark);
+}
+/* rightside */
+.rightside {
+  background-color: var(--blue-light);
+  /* padding: 1rem 0 1rem; */
+  grid-area: 2/3/3/4;
+  /* change */
+}
+.announce,
+.trend {
+  display: flex;
+  flex-flow: column nowrap;
+}
+.announcebox,
+.trendbox {
+  display: flex;
+  flex-flow: column nowrap;
+  background-color: var(--white);
+  padding: 2rem;
+  border-radius: 0.6rem;
+}
+.announce--item {
+  margin: 0 0 2em;
+}
+.announce--item:last-child {
+  margin: 0;
+}
+
+.announce--item h4 {
+  margin: 0;
+}
+.announce--item p {
+  margin: 0.2em 0 0;
+  color: var(--grey-);
+}
+.trend {
+  padding-bottom: 1rem;
+}
+.trend h5 {
+  margin: 0;
+}
+.trend p {
+  margin: 0.3em 0 0.5rem;
+  color: var(--grey-light);
+}
